Logseq auto save

--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -1,10 +1,10 @@
 * Liste von prominenten Corona-Heinis
 ** Attila Hildman
-- … muss man wohl nicht weiter kommentieren
-***
+*** … muss man wohl nicht weiter kommentieren
+*** Kurzer Auszug: [[5G]], [[Impfgegnerschaft]], [[Bill Gates]], [[Zensur]], …
 ** Fler
-- Ken Jebsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKwtV5iKY?t=3836][src]]
-- Entsprechend auch Videos von Ken Jebsen verteilt
+*** Ken Jebsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKwtV5iKY?t=3836][src]]
+*** Entsprechend auch Videos von Ken Jebsen verteilt
 ** Juju (Finanzsystem, Kontrolle, … [[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]])
 ** Nena (kleines Fragezeichen?)
 - Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
