--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -9,7 +9,7 @@
 ** Nena (kleines Fragezeichen?)
 - Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
 ** Nina Hagen
-- [[file:20201003094519-5g.org][5G]] führt zu Überwachungsstaat und Gates kontrolliert Fauci, die WHO und eigentlich die ganze Welt und will alle überwachen (also wohl auch [[file:20201003095723-impfgegnerschaft.org][Impfgegnerschaft]]?) ([[https://twitter.com/sduwe/status/1316395538779115520/photo/3][src]])
+- [[[5G]] führt zu Überwachungsstaat und Gates kontrolliert Fauci, die WHO und eigentlich die ganze Welt und will alle überwachen (also wohl auch [[Impfgegnerschaft]]?) ([[https://twitter.com/sduwe/status/1316395538779115520/photo/3][src]])
 ** Til Schweiger
 - "Bekannte von mir haben auf den Corona-Demos nirgendwo Nazis gesehen"
 - Empfiehlt im April Videos von Bodo Schiffmann, HNO, der Corona mit einer Grippe vergleicht ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107.html][src]])
