--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -7,12 +7,12 @@
 *** Entsprechend auch Videos von Ken Jebsen verteilt
 ** Juju (Finanzsystem, Kontrolle, … [[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]])
 ** Nena (kleines Fragezeichen?)
-- Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
+*** Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
 ** Nina Hagen
-- [[[5G]] führt zu Überwachungsstaat und Gates kontrolliert Fauci, die WHO und eigentlich die ganze Welt und will alle überwachen (also wohl auch [[Impfgegnerschaft]]?) ([[https://twitter.com/sduwe/status/1316395538779115520/photo/3][src]])
+*** [[5G]] führt zu Überwachungsstaat und Gates kontrolliert Fauci, die WHO und eigentlich die ganze Welt und will alle überwachen (also wohl auch [[Impfgegnerschaft]]?) ([[https://twitter.com/sduwe/status/1316395538779115520/photo/3][src]])
 ** Til Schweiger
-- "Bekannte von mir haben auf den Corona-Demos nirgendwo Nazis gesehen"
-- Empfiehlt im April Videos von Bodo Schiffmann, HNO, der Corona mit einer Grippe vergleicht ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107.html][src]])
+*** "Bekannte von mir haben auf den Corona-Demos nirgendwo Nazis gesehen"
+*** Empfiehlt im April Videos von Bodo Schiffmann, HNO, der Corona mit einer Grippe vergleicht ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107.html][src]])
 ** Sido
 - Raunt über Adrenochrom im Ali-As Interview
 - Hat sich danach in deutlichen Worten von Attila Hildmann und Verschwörungstheoretikern distanziert ([[https://youtu.be/QqtPrP3qXOM?t=307][src]])
