--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -14,8 +14,8 @@
 *** "Bekannte von mir haben auf den Corona-Demos nirgendwo Nazis gesehen"
 *** Empfiehlt im April Videos von Bodo Schiffmann, HNO, der Corona mit einer Grippe vergleicht ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107.html][src]])
 ** Sido
-- Raunt über Adrenochrom im Ali-As Interview
-- Hat sich danach in deutlichen Worten von Attila Hildmann und Verschwörungstheoretikern distanziert ([[https://youtu.be/QqtPrP3qXOM?t=307][src]])
+*** Raunt über Adrenochrom im Ali-As Interview
+*** Hat sich danach in deutlichen Worten von Attila Hildmann und Verschwörungstheoretikern distanziert ([[https://youtu.be/QqtPrP3qXOM?t=307][src]])
 ** Detlef D. Soost
 - Fabulierte am 8.5. von Impfpflicht ab 15.5. ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107/66744705-16760095.html][src]])
 ** M.I.A. ([[file:20201003094519-5g.org][5G]] ([[https://www.theguardian.com/media/2020/apr/08/influencers-being-key-distributors-of-coronavirus-fake-news][src]]), [[file:20201003095723-impfgegnerschaft.org][Impfgegnerschaft]] ([[https://www.musikexpress.de/m-i-a-zu-einer-moeglichen-corona-impfung-wenn-ich-waehlen-muesste-wuerde-ich-lieber-sterben-wollen-1500881/][src]]))
