--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -1,7 +1,7 @@
 * Liste von prominenten Corona-Heinis
 ** Attila Hildman
 *** … muss man wohl nicht weiter kommentieren
-*** Kurzer Auszug: [[5G]], [[Impfgegnerschaft]], [[Bill Gates]], [[Zensur]], …
+*** Kurzer Auszug: [[5G]], [[Adrenochrom]], [[Impfgegnerschaft]], [[Bill Gates]], [[Zensur]], …
 ** Fler
 *** Ken Jebsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKwtV5iKY?t=3836][src]]
 *** Entsprechend auch Videos von Ken Jebsen verteilt
