Logseq auto save

--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -1,4 +1,8 @@
-* Liste von prominenten Corona-Heinis
+* Liste von kruden Äußerungen im Zusammenhang mit der Corona-Pandemie
+
+Diese Liste soll nicht als Internetpranger dienen sondern viel mehr dokumentieren, wie anschlussfähig bestimmte Ansichten geworden sind, die noch vor wenigen Monaten als verschwurbelt und abgedreht galten.
+
+Wenn möglich wird direkt auf Quellen verlinkt.
 ** Attila Hildman
 *** … muss man wohl nicht weiter kommentieren
 *** Kurzer Auszug: [[5G]], [[Adrenochrom]], [[Impfgegnerschaft]], [[Bill Gates]], [[Zensur]], …
