Logseq auto save

--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -8,7 +8,7 @@ Diese Liste soll nicht als Internetpranger dienen sondern viel mehr dokumentiere
 Wenn möglich wird direkt auf Quellen verlinkt.
 ** Attila Hildman
 *** … muss man wohl nicht weiter kommentieren
-*** Kurzer Auszug: [[5G]], [[Adrenochrom]], [[Impfgegnerschaft]], [[Bill Gates]], [[Zensur]], …
+*** Kurzer Auszug: [[5G]], [[Adrenochrom]], [[Corona-Leugnung]], [[Impfgegnerschaft]], [[Bill Gates]], [[Zensur]], …
 ** Fler
 *** Ken Jebsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKwtV5iKY?t=3836][src]]
 *** Entsprechend auch Videos von Ken Jebsen verteilt
