--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -28,7 +28,7 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 ** Michael Wendler
 *** Die nachfolgenden Aussagen bezieh sich alle auf sein DSDS-Ausstiegsvideo
 *** Redet von "[[Corona-Leugnung][angeblicher Corona-Pandemie]]"
-***
+*** Es herrscht [[Zensur]], nur auf Telegram kann man noch frei reden
 ** M.I.A.
 *** Warnt vor [[5G]] ([[https://www.theguardian.com/media/2020/apr/08/influencers-being-key-distributors-of-coronavirus-fake-news][src]])
 *** Hat sich klar als [[Impfgegnerschaft][Impfgegnerin]] positioniert ([[https://www.musikexpress.de/m-i-a-zu-einer-moeglichen-corona-impfung-wenn-ich-waehlen-muesste-wuerde-ich-lieber-sterben-wollen-1500881/][src]]))
