--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -13,7 +13,7 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 *** Ken Jebsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKwtV5iKY?t=3836][src]]
 *** Entsprechend auch Videos von Ken Jebsen verteilt
 ** Juju
-*** Finanzsystem, Kontrolle, … [[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]] (sie verlinkt auf eine andere Quelle, "ist nicht ihre Meinung aber soll mal zum Nachdenken anregen")
+*** Verlinkt auf eine andere Quelle, "ist nicht ihre Meinung aber soll mal zum Nachdenken anregen", darin Geraune übers [[Finanzsystem]], [[5G]], [[Impfgegnerschaft]] ([[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]])
 ** Nena (kleines Fragezeichen?)
 *** Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
 ** Nina Hagen
