--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -23,7 +23,7 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 *** Empfiehlt im April Videos von Bodo Schiffmann, HNO, der Corona mit einer Grippe vergleicht ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107.html][src]])
 ** Sido
 *** Raunt über [[Adrenochrom]] im Ali-As Interview
-*** Hat sich danach in deutlichen Worten von Attila Hildmann und Verschwörungstheoretikern distanziert ([[https://youtu.be/QqtPrP3qXOM?t=307][src]])
+*** Hat sich danach in **deutlichen** Worten von Attila Hildmann und Verschwörungstheoretikern distanziert ([[https://youtu.be/QqtPrP3qXOM?t=307][src]])
 ** Detlef D. Soost
 *** Fabulierte am 8.5. von Impfpflicht ab 15.5. ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107/66744705-16760095.html][src]]), als auch in der Nähe von [[Impfgegnerschaft]]
 ** Michael Wendler
