--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -1,3 +1,5 @@
+#+TITLE: Covid Brainworms
+
 Liste von kruden Äußerungen im Zusammenhang mit der Corona-Pandemie
 
 Diese Liste soll nicht als Internetpranger dienen sondern viel mehr dokumentieren, wie anschlussfähig bestimmte Ansichten geworden sind, die noch vor wenigen Monaten als verschwurbelt und abgedreht galten.
