Logseq auto save

--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -14,6 +14,8 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 *** Verlinkt auf eine andere Quelle, "ist nicht ihre Meinung aber soll mal zum Nachdenken anregen", darin Geraune übers [[Finanzsystem]], [[5G]], [[Impfgegnerschaft]] ([[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]])
 ** Nena (kleines Fragezeichen?)
 *** Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
+**** /Licht/ ist auch der Name des aktuellen Albums, so maybe…
+****
 ** Nina Hagen
 *** [[5G]] führt zu Überwachungsstaat und [[Bill Gates]] kontrolliert Fauci, die WHO und eigentlich die ganze Welt und will alle überwachen (also wohl auch [[Impfgegnerschaft]]?) ([[https://twitter.com/sduwe/status/1316395538779115520/photo/3][src]])
 ** Til Schweiger
