--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -1,14 +1,32 @@
-*** Kurzer Auszug:bsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKt=3836][enken anregen", darin Geraune übers [[Finanzsystem]], [[5G]], [[Impfgegnerschaft]] ([[https://mobile.twitter.com/Labello_miro/status/12391636056958279* Alles Panikmache, Licht, Liebe und Glaube an Gott sAntwort ie ganze Welt und will alle überwachen (also wohl auch [[Impfgegnerschaft]]?) ([[https://twitter.com/sduwe/status/1316395538779115520/photo/3][src]])
+*** Kurzer Auszug: [[5G]], [[Adrenochrom]], [[Corona-Leugnung]], [[Impfgegnerschaft]], [[Bill Gates]], [[Zensur]], …
+** Fler
+*** Ken Jebsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKt=3836][src]]
+*** Entsprechend auch Videos von Ken Jebsen verteilt
+** Juju
+*** Verlinkt auf eine andere Quelle, "ist nicht ihre Meinung aber soll mal zum Nachdenken anregen", darin Geraune übers [[Finanzsystem]], [[5G]], [[Impfgegnerschaft]] ([[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]])
+** Nena (kleines Fragezeichen?)
+*** Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
+**** /Licht/ ist auch der Name des aktuellen Albums, so maybe…
+** Nina Hagen
+*** [[5G]] führt zu Überwachungsstaat und [[Bill Gates]] kontrolliert Fauci, die WHO und eigentlich die ganze Welt und will alle überwachen (also wohl auch [[Impfgegnerschaft]]?) ([[https://twitter.com/sduwe/status/1316395538779115520/photo/3][src]])
 ** Til Schweiger
 *** "Bekannte von mir haben auf den Corona-Demos nirgendwo Nazis gesehen"
-*** Empfiehlfmann, HNO, der Corona mit einer Grippe vergleicht ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-stau.be/QqtPrP3qXOM?t=307][src]])
+*** Empfiehlt im April Videos von Bodo Schiffmann, HNO, der Corona mit einer Grippe vergleicht ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107.html][src]])
+** Sido
+*** Raunt über [[Adrenochrom]] im Ali-As Interview
+*** Hat sich danach in *deutlichen* Worten von Attila Hildmann und Verschwörungstheoretikern distanziert ([[https://youtu.be/QqtPrP3qXOM?t=307][src]])
 ** Detlef D. Soost
-*** Fabulierte pfpflicht ab 1:custom_id: 5fb0db1a-684d-4caa-bf01-516d4900afa1
+*** Fabulierte am 8.5. von Impfpflicht ab 15.5. ([[https://www.faz.net/aktuell/gesellschaft/gesundheit/coronavirus/corona-krise-promis-die-auf-verschwoerungstheoretiker-starren-16760107/66744705-16760095.html][src]]), als auch in der Nähe von [[Impfgegnerschaft]]
+** Michael Wendler
+:PROPERTIES:
+:custom_id: 5fb0db1a-684d-4caa-bf01-516d4900afa1
 :END:
 *** Die nachfolgenden Aussagen bezieh sich alle auf sein DSDS-Ausstiegsvideo
 *** Redet von "[[Corona-Leugnung][angeblicher Corona-Pandemie]]"
-*** Es herrscht [[Zensur]], nur auf Telegram kann man noc.I.A.
-*** Warnt vng-key-distributors-of-coronavirus-fake-news][src]])
+*** Es herrscht [[Zensur]], nur auf Telegram kann man noch frei reden
+** M.I.A.
+*** Warnt vor [[5G]] ([[https://www.theguardian.com/media/2020/apr/08/influencers-being-key-distributors-of-coronavirus-fake-news][src]])
 *** Hat sich klar als [[Impfgegnerschaft][Impfgegnerin]] positioniert ([[https://www.musikexpress.de/m-i-a-zu-einer-moeglichen-corona-impfung-wenn-ich-waehlen-muesste-wuerde-ich-lieber-sterben-wollen-1500881/][src]])
 ** Woody Harrelson
-*** [[5G]] is "exacerbating the
+*** [[5G]] is "exacerbating the spread of the virus" ([[https://www.theguardian.com/media/2020/apr/08/influencers-being-key-distributors-of-coronavirus-fake-news][src]])
+**** "I haven't fully vetted it but find it very interesting"
