Restore old version of Covid Brainworms

--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -1,6 +1,14 @@
+#+TITLE: Covid Brainworms
+
+Liste von kruden Äußerungen im Zusammenhang mit der Corona-Pandemie
+
+Diese Liste soll nicht als Internetpranger dienen sondern viel mehr dokumentieren, wie anschlussfähig bestimmte Ansichten geworden sind, die noch vor wenigen Monaten als verschwurbelt und abgedreht galten.
+
+Wenn möglich wird direkt auf Quellen verlinkt.
+** Attila Hildman
 *** Kurzer Auszug: [[5G]], [[Adrenochrom]], [[Corona-Leugnung]], [[Impfgegnerschaft]], [[Bill Gates]], [[Zensur]], …
 ** Fler
-*** Ken Jebsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKt=3836][src]]
+*** Ken Jebsen und Oliver Janich sind "Kämpfer für die Wahrheit", "Wir leben nicht in einer Demokratie" [[https://youtu.be/79cKwtV5iKY?t=3836][src]]
 *** Entsprechend auch Videos von Ken Jebsen verteilt
 ** Juju
 *** Verlinkt auf eine andere Quelle, "ist nicht ihre Meinung aber soll mal zum Nachdenken anregen", darin Geraune übers [[Finanzsystem]], [[5G]], [[Impfgegnerschaft]] ([[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]])
