--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -32,6 +32,8 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 *** Die nachfolgenden Aussagen bezieh sich alle auf sein DSDS-Ausstiegsvideo
 *** Redet von "[[Corona-Leugnung][angeblicher Corona-Pandemie]]"
 *** Es herrscht [[Zensur]], nur auf Telegram kann man noch frei reden
+** Jens Lehmann
+*** Tweet, in dem er letztenendes sein Beileid für die Opfer einer Pandemie ausgedrückt hat, die wie eine schlimme Grippe ist
 ** M.I.A.
 *** Warnt vor [[5G]] ([[https://www.theguardian.com/media/2020/apr/08/influencers-being-key-distributors-of-coronavirus-fake-news][src]])
 *** Hat sich klar als [[Impfgegnerschaft][Impfgegnerin]] positioniert ([[https://www.musikexpress.de/m-i-a-zu-einer-moeglichen-corona-impfung-wenn-ich-waehlen-muesste-wuerde-ich-lieber-sterben-wollen-1500881/][src]])
