--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -34,7 +34,7 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 *** Es herrscht [[Zensur]], nur auf Telegram kann man noch frei reden
 ** Jens Lehmann
 *** Tweet, in dem er letztenendes sein Beileid für die Opfer einer Pandemie ausgedrückt hat, die wie eine schlimme Grippe ist ([[https://twitter.com/akm0803/status/1337875024984879107/photo/1][src]])
-****
+**** Kurz danach gelöscht
 ** M.I.A.
 *** Warnt vor [[5G]] ([[https://www.theguardian.com/media/2020/apr/08/influencers-being-key-distributors-of-coronavirus-fake-news][src]])
 *** Hat sich klar als [[Impfgegnerschaft][Impfgegnerin]] positioniert ([[https://www.musikexpress.de/m-i-a-zu-einer-moeglichen-corona-impfung-wenn-ich-waehlen-muesste-wuerde-ich-lieber-sterben-wollen-1500881/][src]])
