Logseq auto save

--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -12,6 +12,9 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 *** Entsprechend auch Videos von Ken Jebsen verteilt
 ** Juju
 *** Verlinkt auf eine andere Quelle, "ist nicht ihre Meinung aber soll mal zum Nachdenken anregen", darin Geraune übers [[Finanzsystem]], [[5G]], [[Impfgegnerschaft]] ([[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]])
+** Jens Lehmann
+*** Tweet, in dem er letztenendes sein Beileid für die Opfer einer Pandemie ausgedrückt hat, die wie eine schlimme Grippe ist ([[https://twitter.com/akm0803/status/1337875024984879107/photo/1][src]])
+**** Kurz danach gelöscht
 ** Nena (kleines Fragezeichen?)
 *** Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
 **** /Licht/ ist auch der Name des aktuellen Albums, so maybe…
@@ -32,9 +35,6 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 *** Die nachfolgenden Aussagen bezieh sich alle auf sein DSDS-Ausstiegsvideo
 *** Redet von "[[Corona-Leugnung][angeblicher Corona-Pandemie]]"
 *** Es herrscht [[Zensur]], nur auf Telegram kann man noch frei reden
-** Jens Lehmann
-*** Tweet, in dem er letztenendes sein Beileid für die Opfer einer Pandemie ausgedrückt hat, die wie eine schlimme Grippe ist ([[https://twitter.com/akm0803/status/1337875024984879107/photo/1][src]])
-****
 ** M.I.A.
 *** Warnt vor [[5G]] ([[https://www.theguardian.com/media/2020/apr/08/influencers-being-key-distributors-of-coronavirus-fake-news][src]])
 *** Hat sich klar als [[Impfgegnerschaft][Impfgegnerin]] positioniert ([[https://www.musikexpress.de/m-i-a-zu-einer-moeglichen-corona-impfung-wenn-ich-waehlen-muesste-wuerde-ich-lieber-sterben-wollen-1500881/][src]])
