Logseq auto save

--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -1,4 +1,6 @@
 #+TITLE: Covid Brainworms
+#+PUBLISHED: true
+#+PERMALINK: covid%20brainworms
 
 Liste von kruden Äußerungen im Zusammenhang mit der Corona-Pandemie
 
