Logseq auto save

--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -15,7 +15,7 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 ** Juju
 *** Verlinkt auf eine andere Quelle, "ist nicht ihre Meinung aber soll mal zum Nachdenken anregen", darin Geraune übers [[Finanzsystem]], [[5G]], [[Impfgegnerschaft]] ([[https://mobile.twitter.com/Labello_miro/status/1239163605695827970/photo/1][src]])
 ** Ken Jebsen
-*** "Maske ist das neue Hakenkreuz"
+*** "Mundschutz ist das neue Hakenkreuz"
 ** Jens Lehmann
 *** Tweet, in dem er letztenendes sein Beileid für die Opfer einer Pandemie ausgedrückt hat, die wie eine schlimme Grippe ist ([[https://twitter.com/akm0803/status/1337875024984879107/photo/1][src]])
 **** Kurz danach gelöscht
