--- a/pages/covid_brainworms.org
+++ b/pages/covid_brainworms.org
@@ -22,6 +22,8 @@ Wenn möglich wird direkt auf Quellen verlinkt.
 ** Nena (kleines Fragezeichen?)
 *** Alles Panikmache, Licht, Liebe und Glaube an Gott sind die Antwort ([[https://twitter.com/sduwe/status/1316395538779115520/photo/1][src]])
 **** /Licht/ ist auch der Name des aktuellen Albums, so maybe…
+*** Postet Bild zur Schwurbeldemo in Kassel mit dem Text "Danke ❤️"
+****
 ** Nina Hagen
 *** [[5G]] führt zu Überwachungsstaat und [[Bill Gates]] kontrolliert Fauci, die WHO und eigentlich die ganze Welt und will alle überwachen (also wohl auch [[Impfgegnerschaft]]?) ([[https://twitter.com/sduwe/status/1316395538779115520/photo/3][src]])
 ** Til Schweiger
